# contest

./: .gitignore  README.md  atcoder.opam  contest.opam  dune-project  flake.nix  package-lock.json  package.json
abc/abc013/: contest.acc.json
abc/abc022/: contest.acc.json
abc/abc034/: contest.acc.json
abc/abc061/: contest.acc.json
abc/abc126/: contest.acc.json
abc/abc128/: contest.acc.json
abc/abc144/: contest.acc.json
abc/abc225/: contest.acc.json
abc/abc245/: contest.acc.json
abc/abc264/: contest.acc.json
abc/abc266/: contest.acc.json
abc/abc269/: contest.acc.json
abc/abc270/: contest.acc.json
abc/abc271/: contest.acc.json
abc/abc272/: contest.acc.json
abc/abc274/: contest.acc.json
abc/abc275/: contest.acc.json
abc/abc285/: contest.acc.json
abc/abc287/: contest.acc.json
abc006/: contest.acc.json
abc006/b/: b.ml
abc167/: contest.acc.json
abc274/: contest.acc.json
abc275/: contest.acc.json
arc116/: contest.acc.json
arc153/: contest.acc.json
arc154/: contest.acc.json
codeforces/: codeforces.opam  dune-project  flake.nix  start.sh
codeforces/r897d2/A/: main.ml
codeforces/r897d2/C/: main.ml
codeforces/r902d2/A/: main.ml
codeforces/r902d2/B/: main.ml
codeforces/r902d2/B/test/: sample-1.in  sample-1.out
codeforces/r902d2/C/: dune  main.ml
codeforces/r902d2/C/test/: sample-1.in  sample-1.out
codeforces/template/: main.ml
lib/: dim2.ml  dune  graph.ml  heap.ml  permutation.ml  primes.ml  search.ml  set.ml  tree.ml
template/: dune  main.ml  template.json
typical90/: README.md
virtual/: yaruzo.sh
(+2200 files in other folders)
