(lang dune 3.7)

(name codeforces)

(generate_opam_files true)

(source (github lmdexpr/contest))

(authors "Yuki Tajiri")

(maintainers "Yuki Tajiri <lmdexpr@gmail.com>")

(license MIT)

(package
 (name codeforces)
 (synopsis "For contest.")
 (allow_empty)
 (depends
   (ocaml (= 4.02.1))
   dune))
